# Cookie

./: .gitignore  README.md  animes.py  flask_host.py  main.py  pyproject.toml  requirements.txt  sync_commands.py
command_logics/: get_anime_genres.py  get_magazines.py  get_manga_genres.py  get_random_anime.py  get_random_characters.py  get_random_manga.py  get_specific_anime.py  get_specific_character.py  get_specific_manga.py  get_top_animes.py  get_top_mangas.py  jptranslate.py
commands/: anime_genres.py  help.py  magazines.py  manga_genres.py  ping.py  random_anime.py  random_characters.py  random_manga.py  say.py  serverinfo.py  specific_anime.py  specific_character.py  specific_manga.py  top_animes.py  top_mangas.py  translatetojp.py
slash_commands/: AnimeGenresCog.py  HelpCog.py  JpTranslateCog.py  MagazinesCog.py  MangaGenresCog.py  PingCog.py  RandomAnimeCog.py  RandomCharacterCog.py  RandomMangaCog.py  SayCog.py  ServerInfoCog.py  SpecificAnimeCog.py  SpecificCharacterCog.py  SpecificMangaCog.py  TopAnimesCog.py  TopMangasCog.py
