[project]
name = "cookie"
version = "0.1.0"
description = "A feature-rich Discord bot for retrieving information about anime, manga, and more."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "discord-py>=2.6.4",
    "flask>=3.1.3",
    "googletrans>=4.0.2",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]
